# rust-weather

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  weather.rs
src/helper/: helper.rs  mod.rs
tests/: lib.rs
