[project]
name = "weather"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]

[lib]
name = "weather"
path = "src/weather.rs"


[[bin]]
name = "weather"

[dependencies]
hyper = "*"
rustc-serialize = "*"
regex = "*"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
